--- a/css/index.css
+++ b/css/index.css
@@ -47,10 +47,67 @@
 .m-book-left{width:424px;height:380px;float:left;min-height:380px;background:#ffffff;}
 /* 精选专题 */
 .m-topic-wraper{}
-.m-topic{margin-top:40px;min-height:280px;background:#fff;}
+.m-topic{margin-top:40px;min-height:307px;background:#fff;}
 .m-topic-block{padding:0 20px;}
 .m-topic-header{height:75px;line-height: 75px;border-bottom:1px solid #efefef}
 .m-topic-content ul li{margin-top:20px;width:262px;height:170px;background:#606060;margin-right:20px;float:left;}
 .m-topic-content ul li:nth-of-type(3){margin-right:0px;}
+/* 推荐专家 */
+.m-mavin-content{margin-top:20px;}
+.m-mavin-wraper{float:left;width:260px;min-height:343px;margin-right:20px;border:1px solid #f1f1f1;margin-bottom:27px;}
+.m-mavin-top{margin-bottom:25px;width:260px;height:170px;background:#606060;}
+.m-mavin-wraper:nth-of-type(3){margin-right:0px;}
+.m-mavin-middle{text-align:center;margin-bottom:25px;}
+.m-mavin-middle ul li{line-height:30px;}
+.m-mavin-bottom{padding:0 20px;}
+.m-mavin-bottom ul li{float:left;margin-right:16px;}
+.m-mavin-bottom ul li:nth-of-type(2){margin-right:0}
+/* 精选项目 */
+.m-system-content ul li{float:left;margin-right:20px;}
+.m-system-content ul li:last-child{margin-right:0px;}
+.m-system-content ul li p{text-align:center;}
+.m-system-pic{margin-bottom:20px;width:192px;height:130px;background:#606060;float: left; }
 /* 右侧 */
-.m-container-right{width:290px;height:300px;background:#f00;float: left;margin-left:20px;}
+.m-container-right{float:right;overflow: hidden}
+/* 登陆 */
+.m-login-wraper{margin-bottom:40px;padding-top:20px;width:290px;min-height: 360px;background:#fff}
+.m-avater{width:70px;height:70px;background:#606060;border-radius:50%;margin:0 auto;}
+.m-user{margin-top:10px;text-align:center;}
+.m-login-btn ul li{margin-top:25px;margin-left:20px;float: left;width:116px;height:30px;background:#2aaec4;border-radius:4px;color:#ffffff;text-align:center;line-height:30px;}
+.m-login-list{margin-top:18px;}
+.m-login-list ul li{border:1px solid #e0e0e0;width:144px;height:60px;line-height:60px;float:left;text-align:center;}
+.m-login-list ul li:nth-of-type(odd){border-left:none;border-bottom:none}
+.m-login-list ul li:nth-of-type(even){border-right:none;border-left:none;border-bottom:none}
+.m-login-list ul li:nth-of-type(4){border-bottom:1px solid #e0e0e0;}
+/* 热门问答 */
+.m-hotanswer-wraper{width:290px;height:434px;background:#ffffff;margin-bottom:40px;}
+.m-hotanswer-header,.m-foreshow-header{height:62px;border-bottom:1px solid #efefef;line-height: 62px;}
+.m-hotanswer-header span:nth-of-type(1),.m-foreshow-header span:nth-of-type(1){font-size:22px;margin-left:20px;}
+.m-hotanswer-header span:nth-of-type(2),.m-foreshow-header span:nth-of-type(2){float:right;font-size: 14px;color:#ebebeb;margin-right:20px}
+.m-hotanswer-list{padding:0 20px;}
+.m-list-wraper{border-bottom:1px solid #e0e0e0;padding-bottom:14px;}
+.m-list-wraper:last-child{border-bottom:none}
+.m-hotanswer-content{margin-top:20px;margin-bottom:15px;}
+/* .m-hotanswer-user{margin-bottom:20px;} */
+.m-hotanswer-user ul li{float:left;line-height: 30px;}
+.m-hotanswer-user ul li span:nth-of-type(1){float:left;display:inline-block;width:30px;height:30px;border-radius:50%;background:#999999}
+.m-hotanswer-user ul li span:nth-of-type(2){float:left;display:inline-block;margin-left:10px;line-height: 30px;}
+.m-hotanswer-user ul li:nth-of-type(2){float:right;color:#a7a7a7}
+/* 直播预告 */
+.m-foreshow-wraper{width:290px;height:420px;background:#ffffff;margin-bottom:40px;}
+.m-foreshow-show{padding:0 20px;margin-top:20px;}
+.m-foreshow-txt span:nth-of-type(1){display:inline-block;font-size: 16px;}
+.m-foreshow-txt span:nth-of-type(2){color:#e0e0e0;float: right}
+/* 边听边读 */
+.m-listen-wraper,.m-student-wraper{margin-bottom:40px;width:290px;height:304px;background:#ffffff;}
+.m-foreshow-list ul li{font-size: 16px;line-height: 30px;}
+.m-foreshow-listwraper{padding:0 20px;margin-top:20px;}
+.m-foreshow-list ul li span:nth-of-type(1){margin-right:7px;width:18px;height:18px;display:inline-block;float:left;}
+.m-foreshow-list ul li span:nth-of-type(1) img{width:100%;vertical-align: middle}
+.m-foreshow-list ul li span:nth-of-type(2){width:210px;display: inline-block;float:left;text-overflow:ellipsis; white-space:nowrap; overflow:hidden}
+.m-foreshow-list ul li:nth-of-type(even){margin-left:23px;color:#999999}
+.m-foreshow-list ul li:nth-of-type(odd){clear: both}
+/* 招生秀 */
+.m-student-box{width:200px;height:200px;background: #ddd}
+/* footer上面 */
+.m-container-footer{width:1180px;height:100px;background: #999999;margin:0 auto}
